# open_api_service

./: Dockerfile  Dockerfile-datascrape-rabbitmq-consumer  Dockerfile-embeddings-rabbitmq-consumer  Dockerfile-rabbitmq-consumer  README.md  appspec.yml  docker-compose-deploy.yml  docker-compose.yml  main.py  pyproject.toml  rabbit_mq_consumer.py  requirements.txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 314476470e33_create_data_scrape_urls.py  bab82fd32dfe_creation_of_data_scrape_job_schema.py
app/: main.py
app/domain/: open_ai.py
app/repositories/: data_scrape_repository.py  open_ai_embeddings_repository.py  postgres_repository.py
app/routers/: data_scrape_router.py  open_api_router.py
app/services/: data_scrape_service.py  open_ai_service.py
app/util/: base_consumer.py  base_publisher.py
deployments/: infra_cloudformation.yml  infra_db_cloudformation.yml
domain/: data_scrape.py  open_ai.py  rabbit_mq_routing_keys.py
domain/sql_alchemy_models/: data_scrape_model.py
migrations/: 1_create_open_ai_embeddings_collection.py
repositories/: data_scrape_repository.py  mivilus_base_repository.py  open_ai_embeddings_repository.py  postgres_repository.py
routers/: data_scrape_router.py  open_api_router.py
scripts/: deploy_docker.sh  parse_stacks.py
services/: data_scrape_service.py  open_ai_service.py
util/: base_publisher.py  data_scrape_consumer.py  data_scrape_producer.py
util/data_scrape/: rabbit_mq_consumer.py
util/embeddings/: embeddings_consumer.py  embeddings_producer.py  rabbit_mq_consumer.py
(+7 files in other folders)
