[tool.poetry]
name = "openai-embeddings-service"
version = "0.1.0"
description = "Service to have endpoints for interacting with embeddings from open ai and saving them into vector databases"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.5.0"
bs4 = "^0.0.2"
openai = "^1.55.0"
pandas = "^2.2.3"
tiktoken = "^0.8.0"
fastapi = "^0.115.5"
gino-starlette = "^0.1.6"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
networkx = "^3.4.2"
pika = "^1.3.2"
psycopg2-binary = "^2.9.10"
selenium = "^4.26.1"
pymilvus = "2.4.0"
uvicorn = "^0.32.1"
alembic = "^1.14.0"
sqlalchemy = "1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
